# oldandmemorable

Akanksha/LoadAutomation/: Load Auto-doc
Akanksha/LoadAutomation/LoadTestScripts/Help/: openser-orig.cfg  openser.cfg
Akanksha/LoadAutomation/LoadTestScripts/Openser/: callgen_config_gen.py  commands.txt  configureOpenser.sh  genCommands.txt  if-nd.sh  loadConfig  (+7 more)
Akanksha/LoadAutomation/SUTAutomation/: configFile.sh  loadConfig  parser.py  script-Config.sh  sut_config_generator.py
Akanksha/LoadAutomation/sit_scripts/: Makefile  getethers.py  getiserver  ihunt  opensips  qmlist  test_reboot
Akanksha/OhPhoneBuild/ohphone/: .cvsignore  Makefile  OhPhone.dsp  ReadMe.txt  check_listen.awk  main.cxx  main.h  ohphone.1  ohphone.dsw  precompile.cxx  regtest  shmvideo.cxx  shmvideo.h  stresstest  version.h  vidlinux.cxx  vidlinux.h  xlibvid.cxx  xlibvid.h
Akanksha/OhPhoneBuild/openh323/: Makefile.in  OpenH323.dsw  OpenH323dll.dsp  Openh323libce.vcp  config.status  configure  configure.in  openh323.dxx  openh323u.mak  openh323u.mak.in
Akanksha/OhPhoneBuild/openh323/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/dllcodecs/CVS/: Entries  Repository  Tag
Akanksha/OhPhoneBuild/openh323/dllcodecs/ilbccodec/: Makefile  extract-cfile.awk  ilbccodec.dsp  ilbccodec.dsw
Akanksha/OhPhoneBuild/openh323/dllcodecs/ilbccodec/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/include/: .cvsignore  channels.h  codecs.h  dllcodec.h  ffh263codec.h  g7231codec.h  g726codec.h  g729codec.h  gkclient.h  gkserver.h  gsmcodec.h  guid.h  h225ras.h  h235auth.h  h261codec.h  h263codec.h  h323.h  h323annexg.h  h323caps.h  h323con.h  h323ep.h  h323pdu.h  h323rtp.h  h323t120.h  h323t38.h  h323trans.h  h450pdu.h  ilbccodec.h  ixjlid.h  jitter.h  lid.h  lpc10codec.h  mediafmt.h  mscodecs.h  opalvxml.h  opalwavfile.h  openh323buildopts.h  openh323buildopts.h.in  peclient.h  q931.h  (+7 more)
Akanksha/OhPhoneBuild/openh323/include/CVS/: Entries  Repository  Root
Akanksha/OhPhoneBuild/openh323/samples/mfc/: mfc.dsp  mfcEndPoint.cpp
Akanksha/OhPhoneBuild/openh323/samples/mfc/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/samples/mfc/res/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/samples/opent38/: .cvsignore  opent38.dsp
Akanksha/OhPhoneBuild/openh323/samples/opent38/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/: .cvsignore  Makefile  OpenH323.dtf  OpenH323n.dtf  channels.cxx  codecs.cxx  cu30codec.cxx  dynacodec.cxx  ffh263codec.cxx  g7231codec.cxx  g726codec.cxx  g729codec.cxx  gkclient.cxx  gkserver.cxx  gsmcodec.cxx  h225.asn  h225ras.cxx  h235auth.cxx  h235auth1.cxx  h261codec.cxx  h263codec.cxx  h323.cxx  h323annexg.cxx  h323caps.cxx  h323ep.cxx  h323neg.cxx  h323pdu.cxx  h323rtp.cxx  h323t38.cxx  h323trans.cxx  h450pdu.cxx  ilbccodec.cxx  ixjunix.cxx  ixjwin32.cxx  jitter.cxx  lid.cxx  lpc10codec.cxx  mediafmt.cxx  mscodecs.cxx  opalvxml.cxx  (+11 more)
Akanksha/OhPhoneBuild/openh323/src/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/g726/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/gsm/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/gsm/inc/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/gsm/src/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/iLBC/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/lpc10/: lpc10.h
Akanksha/OhPhoneBuild/openh323/src/lpc10/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/lpc10/src/: analys.c  bsynz.c  chanwr.c  dcbias.c  decode_.c  deemp.c  difmag.c  dyptrk.c  encode_.c  energy.c  f2c.h  f2clib.c  ham84.c  hp100.c  invert.c  irc2pc.c  ivfilt.c  lpcdec.c  lpcenc.c  lpcini.c  lpfilt.c  median.c  mload.c  onset.c  pitsyn.c  placea.c  placev.c  preemp.c  prepro.c  random.c  rcchk.c  synths.c  tbdm.c  voicin.c  vparms.c
Akanksha/OhPhoneBuild/openh323/src/lpc10/src/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/speex/CVS/: Entries  Repository  Tag
Akanksha/OhPhoneBuild/openh323/src/speex/libspeex/CVS/: Entries  Repository
Akanksha/OhPhoneBuild/openh323/src/vic/: encoder-h261.cxx  encoder.h  p64.cxx
Akanksha/OhPhoneBuild/openh323/src/vic/CVS/: Entries  Repository
Akanksha/sampleUML/: BkupMSW.java  CDRTest.java  CallTest.java  CallTestError.java  Dmalloc_Env.java  Endpoint.java  H323Receiver.java  H323Transmitter.java  LocalServer.java  MSW.java  MetaCallTest.java  MetaCallTestError.java  Realm.java  Resource.java  SIPEndpoint.java  Session.java  call.py  control.py  gnuGatekeeper.java
SBCSImulator/.svn/tmp/: svn-A6819339
SBCSImulator/NARS/NARS/: global.mk  nxi_preinstall  setup
SBCSImulator/NARS_BUilD/: nxi_finalize
SBCSImulator/NARS_BUilD/install/: LICENSE  alinstall.sh  changePath.sh  patch.sh
SBCSImulator/cdrgeneration/: netConf.pl  today.pl
SBCSImulator/narsbuild/NARS-8.0.2.2/: cdrdel  createNarsCfg.act  error.properites  gencdrs.pl  libexpatpackage.tar  logpp  monitor.pl  nars.cfg  narsagent  nextoneNarsAgent  perl-DBD-mysql-4.012-2.1.x86_64.rpm  perl-Data-ShowTable-3.3-707.3.x86_64.rpm  rateone.pl
SBCSImulator/narsbuild/install/: NarsAgentInst.pl  check-wget.sh  nars-agent-files  narsinstall.sh
SBCSImulator/pcaps/: r.pcap
SBCSImulator/snmptraps/: SnmpTrapGenerator.pl  SnmpTrapGenerator.pl.org  netConf.pl  readConf.pl  sendTraps___org.pl
SBCSImulator/snmptraps/misc/: b.pl  config.txt  latest_snmp.pl  letsc.pl  new_snmptraps.pl  now.pl  snmp_new.pl  snmpd.conf  snmpd.conf.org  snmpfunct_bk.pl  snmptrap_create.pl  test.pl  trying.pl
(+1176 files in other folders)
